Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2403

Segfault when HostDB full

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 4.0.1
    • 7.0.0
    • DNS

    Description

      diags.log leading up to crash:

      [Nov 25 10:50:23.346] Server {0x2b06c4302700} WARNING: out of room in hostdb for round-robin DNS data
      [Nov 25 10:50:23.379] Server {0x2b06c4100700} WARNING: out of room in hostdb for round-robin DNS data
      [Nov 25 10:50:23.449] Server {0x2b06c4a09700} WARNING: out of room in hostdb for round-robin DNS data
      [Nov 25 10:50:23.462] Server {0x2b06c4403700} WARNING: out of room in hostdb for round-robin DNS data
      [Nov 25 10:50:23.494] Server {0x2b06bed1f540} WARNING: out of room in hostdb for reverse DNS data
      [Nov 25 10:54:46.919] {0x2baa2d65b540} STATUS: opened /home/y/logs/trafficserver/diags.log
      [Nov 25 10:54:46.927] {0x2baa2d65b540} NOTE: updated diags config
      [Nov 25 10:54:46.961] Server {0x2baa2d65b540} NOTE: cache clustering disabled
      [Nov 25 10:54:46.995] Server {0x2baa2d65b540} NOTE: ip_allow.config updated, reloading
      [Nov 25 10:54:47.059] Server {0x2baa2d65b540} NOTE: cache clustering disabled
      [Nov 25 10:54:47.072] Server {0x2baa2d65b540} NOTE: logging initialized[15], logging_mode = 3
      [Nov 25 10:54:47.103] Server {0x2baa2d65b540} NOTE: loading plugin '/home/y/libexec64/trafficserver/quick_filter.so'
      [Nov 25 10:54:47.326] Server {0x2baa2d65b540} NOTE: loading plugin '/home/y/libexec64/trafficserver/header_filter.so'
      [Nov 25 10:54:49.395] Server {0x2baa2d65b540} NOTE: traffic server running
      

      From traffic.out:

      NOTE: Traffic Server received Sig 11: Segmentation fault
      /home/y/bin/traffic_server - STACK TRACE:
      /lib64/libpthread.so.0(+0x3d07c0f500)[0x2b06be27a500]
      /home/y/bin/traffic_server(_Z14ats_ip_addr_eqPK8sockaddrS1_+0x3)[0x5e0323]
      /home/y/bin/traffic_server(_ZN18HostDBContinuation8dnsEventEiP7HostEnt+0x2389)[0x5df3b9]
      /home/y/bin/traffic_server(_ZN8DNSEntry9postEventEiP5Event+0x44)[0x5f9cd4]
      /home/y/bin/traffic_server[0x5fbd17]
      /home/y/bin/traffic_server(_ZN10DNSHandler8recv_dnsEiP5Event+0x8d0)[0x5fd5c0]
      /home/y/bin/traffic_server(_ZN10DNSHandler9mainEventEiP5Event+0x12)[0x5fe642]
      /home/y/bin/traffic_server(_ZN7EThread13process_eventEP5Eventi+0x8f)[0x6a321f]
      /home/y/bin/traffic_server(_ZN7EThread7executeEv+0x4a3)[0x6a3c03]
      /home/y/bin/traffic_server(main+0xb14)[0x4c5314]
      /lib64/libc.so.6(__libc_start_main+0xfd)[0x3d0781ecdd]
      /home/y/bin/traffic_server[0x485a19]
      

      Backtrace:

      #0  ats_ip_addr_cmp (lhs=0x7fffdf15e778, rhs=0x8) at ../../lib/ts/ink_inet.h:669
      #1  ats_ip_addr_eq (lhs=0x7fffdf15e778, rhs=0x8) at ../../lib/ts/ink_inet.h:721
      #2  0x00000000005df3b9 in restore_info (this=<value optimized out>, event=<value optimized out>, e=<value optimized out>) at HostDB.cc:1375
      #3  HostDBContinuation::dnsEvent (this=<value optimized out>, event=<value optimized out>, e=<value optimized out>) at HostDB.cc:1604
      #4  0x00000000005f9cd4 in handleEvent (this=0x2b06f40a2120) at ../../iocore/eventsystem/I_Continuation.h:146
      #5  DNSEntry::postEvent (this=0x2b06f40a2120) at DNS.cc:1278
      #6  0x00000000005fbd17 in dns_result (h=0x1778380, e=0x2b06f40a2120, ent=0x1913820, retry=<value optimized out>) at DNS.cc:1230
      #7  0x00000000005fd5c0 in dns_process (this=0x1778380) at DNS.cc:1599
      #8  DNSHandler::recv_dns (this=0x1778380) at DNS.cc:790
      #9  0x00000000005fe642 in DNSHandler::mainEvent (this=0x1778380, event=<value optimized out>, e=<value optimized out>) at DNS.cc:802
      #10 0x00000000006a321f in handleEvent (this=0x2b06bf2d0010, e=0x2b06d8092740, calling_code=5) at I_Continuation.h:146
      #11 EThread::process_event (this=0x2b06bf2d0010, e=0x2b06d8092740, calling_code=5) at UnixEThread.cc:141
      #12 0x00000000006a3c03 in EThread::execute (this=0x2b06bf2d0010) at UnixEThread.cc:265
      #13 0x00000000004c5314 in main (argv=<value optimized out>) at Main.cc:1690
      

      HostDB settings:

      CONFIG proxy.config.hostdb.size INT 200000
      CONFIG proxy.config.hostdb.storage_size INT 50331648
      CONFIG proxy.config.hostdb.ttl_mode INT 0
      CONFIG proxy.config.hostdb.timeout INT 1440
      CONFIG proxy.config.hostdb.strict_round_robin INT 0

      Attachments

        Issue Links

          Activity

            People

              jacksontj Thomas Jackson
              dcarlin David Carlin
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: