TS-2403 - Segfault when HostDB full:  add a null check on lookup_done() result as NULL is returned when the hostdb is full.